[package]
name = "wowAddonManager"
version = "0.1.0"
authors = ["Michael Reimsbach <mr201190@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.9.5"
termion = "1.5.5"
unicode-width = "0.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tempfile = "3.1.0"
zip = "0.5"
config = "0.9"
dirs = "3.0"
