[package]
name = "wowAddonManager"
version = "2.0.0"
authors = ["Michael Reimsbach <mr201190@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A TUI for managing WoW (retail and classic) addons."
readme = "README.md"
homepage = "https://github.com/MR2011/wowAddonManager"
repository = "https://github.com/MR2011/wowAddonManager"
keywords = ["wow", "addon", "classic", "curse", "tui"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
tui = { version = "0.15", default-features = false, features = ["crossterm"] }
crossterm = "0.19"
unicode-width = "0.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tempfile = "3.1.0"
zip = "0.5"
config = "0.9"
dirs = "3.0"
